Refactored. Reduced global variables as much as possible by utilizing more method parameters and return values. Reset variables at the start of each game to prevent accretion of unwanted code and markup. Renamed functions and variables to make code more readable and easier to follow.

--- a/sites/med_mad/style.css
+++ b/sites/med_mad/style.css
@@ -32,7 +32,7 @@ h1 {
   padding: 60px;
 }
 
-#submitButton, #resetButton {
+#submitButton, #newGameButton {
   margin-top: 30px;
   min-height: 90px;
   width: 100%;
@@ -42,7 +42,7 @@ h1 {
   box-shadow: 0 0 2px gray;
 }
 
-#submitButton:hover, #resetButton:hover, input:hover {
+#submitButton:hover, #newGameButton:hover, input:hover {
   background: rgba(10,10,10,0.6);
 }
 
